# publish-crate-demo

./: Cargo.toml
examples/: main.rs
tests/: a.rs
